--- a/01-tools/10-complex-nums/index.html
+++ b/01-tools/10-complex-nums/index.html
@@ -132,7 +132,7 @@
           </tr>
           <tr>
             <td>
-              <img src="/img/tan-theta.png" />
+              <img src="/img/inv-tan-theta.png" />
             </td>
             <td>&nbsp;</td>
             <td style="vertical-align: top;">
