--- a/01-tools/04-non-pythagorean/index.html
+++ b/01-tools/04-non-pythagorean/index.html
@@ -25,11 +25,11 @@
             two sides"</i>
         </p>
         <p>
-          Although no writings of Pythagoras have ever been discovered, his work was written about extensively by other
-          writers such as Plato and Herodotus.
+          Although no writings of Pythagoras have ever been discovered, other ancient writers such as Plato and
+          Herodotus wrote extensively about his work.
           By the Late Roman Period, he was already held in high regard as a philosopher and mathematician.
-          Consequently, the discovery of this relationship had already been attributed to him in spite of the fact that
-          it had been widely known for at least 1000 years before his birth.
+          Consequently, by the first century BC, the discovery of this relationship had already been attributed to him
+          &mdash; in spite of the fact that it had been widely known for at least 1000 years before his birth.
         </p>
         <p>
           One of the earliest documents known to record this relationship is the <a
@@ -88,7 +88,7 @@
           <li>The square opposite the angle has an area equal to the height squared which is the same as
             `sin(&theta;)^2`
           </li>
-          <li>The square adjacent to the angle has an angle equal to the width squared which is the same as
+          <li>The square adjacent to the angle has an area equal to the width squared which is the same as
             `cos(&theta;)^2`
           </li>
         </ul>
