--- a/01-tools/07-maclaurin/index.html
+++ b/01-tools/07-maclaurin/index.html
@@ -18,13 +18,19 @@
 <body>
   <table class="page-table">
     <tr>
+      <th>
+        <h1>Maclaurin Series</h1>
+      </th>
+    </tr>
+    <tr>
       <td class="description">
-        <h2>Maclaurin Series</h2>
         <p>
           The formula for calculating `e^x` is an example of a <a href="https://en.wikipedia.org/wiki/Colin_Maclaurin"
             target="_new">Maclaurin</a> series.
-          Many other values can be calculated using a Maclaurin series, but two that are of particular interest to us
-          are the series for calculating sine and cosine.
+        </p>
+        <p>
+          Many other values can be calculated using a Maclaurin series, but the two that are of particular interest to
+          us are the series for calculating sine and cosine.
         </p>
         <table>
           <tr>
@@ -41,6 +47,7 @@
             <td>`cos(&theta;) = 1 - (&theta;^2)/(2!) + (&theta;^4)/(4!) - (&theta;^6)/(6!) + ...`</td>
           </tr>
         </table>
+
         <h3>e<sup>x</sup> Almost Equals sin(&theta;) + cos(&theta;)</h3>
         <p>
           But hang on a minute&hellip; the infinite series for calculating `sin(&theta;)` and `cos(&theta;)` have a
