--- a/01-tools/08-imaginary/index.html
+++ b/01-tools/08-imaginary/index.html
@@ -18,8 +18,13 @@
 <body>
   <table class="page-table">
     <tr>
+      <th>
+        <h1>Imaginary Numbers</h1>
+      </th>
+    </tr>
+    <tr>
       <td class="description">
-        <h2>Imaginary Numbers</h2>
+        <h2>Background</h2>
         <p>
           The Renaissance was a period of intellectual awakening in which European thinkers rediscovered the classical
           literature of Greece and Rome.
@@ -39,10 +44,13 @@
           However, as the Renaissance slowly transformed into the Enlightenment, mathematicians discovered that instead
           of writing out numerical relationships in words, a new <i>"algebraic"</i> notation offered a way to express
           relationships in a more compact form that was much easier manipulate.
-          Then once mathematicians got used to using algebra, they foudn their proofs no longer needed to be anchored in
+        </p>
+        <p>
+          Then once mathematicians got used to using algebra, they found their proofs no longer needed to be anchored in
           geometry.
         </p>
-        <h3>Squares and Square Roots</h3>
+
+        <h2>Squares and Square Roots</h2>
         <p>
           When you multiply a number by itself, you are said to have "squared" that number.
           Reversing this process is called "taking the square root".
@@ -69,17 +77,24 @@
           Yet these bizarre numbers simply would not go away &mdash; they kept haunting the solutions to cubic
           equations&hellip;
         </p>
-        <h3>Making the Conceptual Leap</h3>
+
+        <h2>Making the Conceptual Leap</h2>
         <p>
-          The fundamental problem here was a conceptual one &mdash; if I say something like <i>"I am holding three
-            apples"</i>, then I have made a statement that directly represents a tangible quantity of real-world
-          objects.
+          The fundamental problem here was a conceptual one &mdash; if I make the statement:
+        </p>
+        <p style="text-align: center; font-style: italic;">
+          "I am holding the square root of nine apples"
         </p>
         <p>
-          In other words, a number such as `three` represents a quantity we can count to.
+          then I have stated (rather awkwardly) that I am holding `three` apples.
         </p>
         <p>
-          But what answer should we write when attempting to calculate `sqrt (-9)`?
+          `Three` is a real-world quantity &mdash; it represents a tangible quantity of things I can pick up &mdash; it
+          is
+          a number I can count to.
+        </p>
+        <p>
+          But what answer can we give when attempting to calculate `sqrt (-9)`?
         </p>
         <p>
           It's not `+3` and its not `-3`, but a `3` must be involved somewhere &mdash; and herein lies the problem.
@@ -97,17 +112,14 @@
         </p>
         <p>
           In spite of this profound philosophical problem, the need to answer questions like <i>"What is the value of
-            `sqrt (-9)`?"</i> did not go away.
+            `sqrt (-9)`?"</i> simply would not go away.
         </p>
-        <p>
-          We best we can do is to rewrite `-9` as `9 xx -1`.
-          Then at least we can calculate the square root of the positive part.
-          `sqrt (9 xx -1)` simplifies to `3 xx sqrt (-1)`, but this is only a partial result because that pesky `sqrt
-          (-1)` simply won't go away.
-        </p>
+        <br>
+
+        <h3>Living With Some Intellectual Discomfort</h3>
         <p>
           What mathematicians struggled to accept was the idea that this strange, intangible quantity could have any
-          mathematical usefulness (However, as Euler later demonstrated, it turned out to be essential).
+          mathematical usefulness (However, as Euler later demonstrated, it turns out to be essential).
         </p>
         <p>
           <a href="https://en.wikipedia.org/wiki/Ren%C3%A9_Descartes" target="_new">Ren&eacute; Descartes</a> was one of
@@ -133,11 +145,24 @@
         <p>
           It's unfortunate, but this name has stuck.
         </p>
+        <br>
+
+        <h3>So What Can We Calculate?</h3>
+        <p>
+          The first step is to rewrite `-9` as `9 xx -1`.
+          Then at least we can calculate the square root of the positive part.
+        </p>
+        <p>
+          `sqrt (9 xx -1)` simplifies to `3 xx sqrt (-1)`, but this is only a partial result because that pesky `sqrt
+          (-1)` simply won't go away.
+        </p>
+        <br>
+
         <h3>The <i>i</i>'s Have It</h3>
         <p>
           Given that these numbers have been labelled "imaginary", and that it is awkward to continually have to write
-          `sqrt (-1)` every time we want to refer to this quantity, mathematicians just use the letter `i` (Physicists
-          however, tend to use the letter `j` instead).
+          `sqrt (-1)` every time we want to refer to this quantity, mathematicians just use the letter `i` (physicists
+          and electrical engineers however, tend to use the letter `j` instead).
         </p>
         <table>
           <tr>
