--- a/01-tools/09-euler-formula/index.html
+++ b/01-tools/09-euler-formula/index.html
@@ -18,8 +18,12 @@
 <body>
   <table class="page-table">
     <tr>
+      <th>
+        <h1>Euler's Formula</h1>
+      </th>
+    </tr>
+    <tr>
       <td class="description">
-        <h2>Euler's Formula</h2>
         <p>
           Previously, we saw that `e^x`, `sin(&theta;)` and `cos(&theta;)` can all be written as Maclaurin series, and
           that
@@ -120,13 +124,15 @@
           Those terms that contribute towards the calculation of the cosine value do not have `i` in their definition,
           but those terms that contribute towards the calculation of the sine value do have `i` in them.
         </p>
+        <br>
+
         <h3>Euler's Identity - A Special Case of Euler's Formula</h3>
         <p>
           Previously, we saw that if you draw an arc around the circumference of a circle whose length equals exactly
           one radius, then the angle you have created is known as 1 radian (about `57.3&deg;`).
         </p>
         <p>
-          What make radians so useful is that we are now measuring rotation in multiples of `pi` &mdash; there are `2
+          What makes radians so useful is that we are now measuring rotation in multiples of `pi` &mdash; there are `2
           pi` radians in a full circle.
         </p>
         <p>
