--- a/01-tools/11-complex-arith/index.html
+++ b/01-tools/11-complex-arith/index.html
@@ -18,11 +18,18 @@
 <body>
   <table class="page-table">
     <tr>
+      <th>
+        <h1>Arithmetic with Complex Numbers</h1>
+      </th>
+    </tr>
+    <tr>
       <td class="description">
-        <h2>Arithmetic with Complex Numbers</h2>
         <p>
           Let's face it, many of our familiar arithmetic operations such as addition or division simply break when we
-          try to calculate an exact value for statements such as `(1 + sqrt (-1))` or `3 / (sqrt (-1))`.
+          try to perform calculations involving `sqrt (-1)`.
+        </p>
+        <p>
+          For example, in `3 / (sqrt (-1))`, how many times does `sqrt (-1)` go into `3`?
         </p>
         <p>
           The only operation that can begin to handle `sqrt (-1)` is multiplication, but even then, we can only fully
@@ -31,7 +38,9 @@
         <p>
           In spite of these limitations, we still need to know how to perform arithmetic using complex numbers.
         </p>
-        <h3>Addition</h3>
+        <br>
+
+        <h2>Addition</h2>
         <p>
           Adding two complex numbers such as `(4 + 3i)` and `(1 - 2i)` is simply a matter of adding the real parts together,
           then adding the imaginary parts.
@@ -53,7 +62,7 @@
 
         <div id="complexAddBox" class="complexAddBox"></div>
 
-        <h3>Subtraction</h3>
+        <h2>Subtraction</h2>
         <p>
           Subtracting two complex numbers such as `(4 + 3i)` and `(1 - 2i)` is simply a matter of subtracting the second
           real part from the first real part, then subtracting the second imaginary part from the first imaginary part.
@@ -75,7 +84,7 @@
 
         <div id="complexSubtractBox" class="complexSubtractBox"></div>
 
-        <h3>Multiplication</h3>
+        <h2>Multiplication</h2>
         <p>
           Multiplying two complex numbers such `(4 + 3i)` and `(1 - 2i)` is a little more involved because we must follow
           the FOIL rule.
@@ -85,7 +94,7 @@
             <td style="vertical-align: top;">
               <p>
                 FOIL is an acronym for <b>F</b>irst, <b>O</b>utside, <b>I</b>nside, <b>L</b>ast that helps you remember
-                the order in which terms are to be multiplied and then added.
+                the order in which terms are to be multiplied.
               </p>
               <table class="eq-sequence">
                 <tr>
@@ -117,7 +126,7 @@
         </table>
         <div id="complexMultBox" class="complexMultBox"></div>
 
-        <h3>Division</h3>
+        <h2>Division</h2>
         <p>
           The basic problem with complex division is that our rules of arthmetic are unable to tell us how many times
           `sqrt (-1)` divides into a real number.
@@ -136,7 +145,9 @@
         <p>
           But if we have a division such as `(4 + 3i)/(2-i)`, how do we go about getting rid of the `-i` in `(2-i)`?
         </p>
-        <h4>The Complex Conjugate</h4>
+        <br>
+
+        <h3>The Complex Conjugate</h3>
         <p>
           When you multiply a complex number by its conjugate, all the `i`'s go away!
           And it is formed simply by reversing the sign of the imaginary term.
@@ -175,6 +186,9 @@
         <p>
           Ok, that's nice, but how does it help us with division?
         </p>
+        <br>
+
+        <h3>Use The Conjugate To Make the `i`s Go Away</h3>
         <p>
           The trick is to multiply both the numerator and denominator by the conjugate of the denominator:
         </p>
