--- a/02-fs/01-convolution-intro/index.html
+++ b/02-fs/01-convolution-intro/index.html
@@ -65,6 +65,11 @@
           is at 180&deg;, the two waves are in anti-phase (I.E. they are perfectly mis-aligned).
         </p>
       </td>
+      <td class="description">
+        <div id="signalTestBox" class="waveBoxHalf"></div>
+      </td>
+    </tr>
+    <tr>
       <td class="description" style="vertical-align: top;">
         <h4>Convolution Curve</h4>
         <p>
@@ -78,17 +83,13 @@
           swings both up and down, and left and right depending on how far the test wave has been phase shifted.
         </p>
       </td>
-    </tr>
-    <tr>
-      <td class="description">
-        <div id="signalTestBox" class="waveBoxHalf"></div>
-      </td>
       <td class="description" style="vertical-align: top;">
         <div id="convBox" class="waveBoxHalf"></div>
       </td>
     </tr>
     <tr>
-      <td class="description">
+      <td class="description" style="vertical-align:top">
+        <h4>Integral of the Convolution Curve</h4>
         <p>
           The final step is to calculate the area of the green shaded section under the convolution curve.
           In other words, we need to calculate the integral of the convolution curve between 0&deg; and 360&deg;.
@@ -99,7 +100,6 @@
         </p>
       </td>
       <td class="description" style="vertical-align: top;">
-        <h4>Integral of the Convolution Curve</h4>
         <div id="areaBox" class="waveBoxHalf"></div>
       </td>
     </tr>
